# bill-easy

./: .dockerignore  .gitignore  .railwayignore  DEPLOYMENT_ADMIN_SETUP.md  DEPLOYMENT_CLOUDFLARE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERCEL_RAILWAY.md  Dockerfile  GEMINI.md  PROJECT_FEATURES.md  README.md  downloads.html  fix_subscriptions.js  install.sh  kimilog.txt  nixpacks.toml  package-lock.json  package.json  railway-monorepo.js  railway.toml  render.yaml  setup-android.sh  vercel.json
admin/: Dockerfile  package.json  server.js
admin/backend/: .env.example  Dockerfile  package-lock.json  package.json  railway.toml  server.js
admin/frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  vercel.json  vite.config.js
audit-tools/: crawler.js  lighthouse.js  package-lock.json  package.json
backend/: .env  Dockerfile  fix_subscriptions.js  package-lock.json  package.json  server.js  test-ai.js  test-genai.js
backend/config/: database.js
backend/controllers/: aiController.js  authController.js  companyController.js  creditNoteController.js  customerController.js  enquiryController.js  reportController.js  (+9 more)
desktop-app/: .gitignore  README.md  index.html  main.js  preload.js  vite.config.js
desktop-app/src-tauri/: Cargo.toml
frontend/: .env  .env.example  .gitignore  Dockerfile  capacitor.config.json  generate_assets.sh  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
unused_files/: devai.py  mybillbook_admin_backup_20260325.sql  mybillbook_backup_20260325.sql
wattvision/: app.js  index.html
(+148 files in other folders)
